--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
-    "dev:watch": "nodemon --watch src --exec ts-node src/index.ts",
+    "dev:watch": "nodemon --watch src --exec ts-node src/lista-de-tareas/index.js",
     "watch": "tsc --watch"
   },
   "keywords": [],
